Tweak spacing issues around tags on incident cards

--- a/client/common/sass/components/_incident-database-card.sass
+++ b/client/common/sass/components/_incident-database-card.sass
@@ -30,9 +30,6 @@
 		+desktop-up
 			grid-column: span 3
 
-	&__tags
-		line-height: 2.2
-
 	&__details-title
 		+desktop-up
 			display: none
