--- a/client/common/sass/components/_tag-list.sass
+++ b/client/common/sass/components/_tag-list.sass
@@ -9,5 +9,5 @@
 	align-content: flex-start
 
 	li
-		margin: 0.5rem 0.5rem 0 0
+		margin: 0 .5rem .5rem 0
 		padding: 0
